finality.css
/* ... */
.layout-desktop .raised.recordingButton.singleRecordingButton.emby-button .buttonText {
	padding-left: 1em;
}

.layout-desktop .listItemBody.itemAction.listItemBody-noleftpadding {

}

.layout-desktop #childrenContent .listViewUserDataButtons {

}

.layout-desktop .verticalSection.detailVerticalSection.moreFromSeasonSection.emby-scroller-container .scrollSlider.focuscontainer-x.itemsContainer.animatedScrollX {
  display: flex;
  flex-direction: row;
}


.layout-desktop #itemDetailPage .verticalSection.detailVerticalSection.moreFromSeasonSection.emby-scroller-container .cardText.cardTextCentered.cardText-first {
	font-size: 88%;
	white-space: normal;
}

.layout-desktop .collectionItems {
  position: absolute;
  display: inline-flex;
  top: 8.2em;
  flex-direction: column;
  width: 13.2em !important;
  overflow: hidden;
  left: 29em;
  height: 20em;
  transition: width 0.64s ease-in-out, height 0.64s ease-in-out;
  z-index: 50;
  transition-delay: 2s;
}

.layout-desktop .collectionItems:hover {
	position: absolute;
	display: inline-flex;
	top: 8.2em;
	flex-direction: column;
	width: 84.2em !important;
	overflow: scroll;
	left: 29em;
	height: 42em;
	transition: width 0.64s ease-in-out;
}

.layout-desktop #itemDetailPage .collectionItems .itemsContainer.collectionItemsContainer.vertical-wrap.padded-left.padded-right {
	padding-left: 1em;
}

.layout-desktop #itemDetailPage .collectionItems .card.portraitCard.card-hoverable.card-withuserdata {
	width: 12em;
	margin-bottom: 0em;
	padding-left: 1.4em;
	padding-top: 0em;
}

.layout-desktop #itemDetailPage .collectionItems .cardText-first {
	font-family: inherit;
	text-transform: uppercase;
	font-weight: 700 !important;
	margin-bottom: -0.2em;
}

.layout-desktop #childrenContent .listItemImageButton.itemAction.paper-icon-button-light {
	display: none;
}

.layout-desktop .programGuideSection.verticalSection.detailVerticalSection {
	position: absolute;
	top: 8em;
	width: 94.38em;
	left: 28em;
}

.layout-desktop .cardImageContainer.coveredImage.cardContent.itemAction.lazy.lazy-image-fadein-fast,
.layout-desktop .cardImageContainer.cardContent.itemAction.lazy.lazy-image-fadein-fast {
	border-radius: 0.5em;
}

#childrenContent .starRatingContainer.mediaInfoItem {
	display: none;
}

/* --- nxllxvxxd edits --- */

/* Change text box selected outline color */
.emby-input:focus,
.emby-textarea:focus {
	border-color: red;
	border-width: 2px;
	transition: border-color 0.3s ease-in-out, border-width 0.3s ease-in-out;
	box-shadow: 0 0 5px red, 0 0 10px red;
}

/*Link color and behavior*/
.button-link {
	color: white;
}
.button-link:hover {
	-webkit-text-decoration: none;
	text-decoration: underline;
	color: red;
}

/* lyrics */
.layout-desktop #lyricsSection .vertical-list.itemsContainer {
	position: fixed;
	top: 35.55em;
	left: 1.72em;
	z-index: 2;
	max-height: calc(100vh - 41.5em);
	display: block;
	overflow-y: auto;
	padding-right: 0em;
	background: #02000696;
	text-align: center;
	border-radius: 0.25em;
	width: 27.2em;
}

/*Item details page hover animations*/
.layout-desktop #itemDetailPage .cardScalable .cardImageContainer {
	transition: transform 0.3s ease;
	display: inline-block;
}

.layout-desktop #itemDetailPage .verticalSection.detailVerticalSection.moreFromSeasonSection.emby-scroller-container .emby-scrollbuttons.padded-right {
	position: fixed;
	font-size: 1.2em;
	left: 1em;
	top: calc(100vh - 16.5em);
	margin-bottom: 5em;
	height: 0.5em;
	width: 7em;
}
.layout-desktop #itemDetailPage .verticalSection.detailVerticalSection.moreFromSeasonSection.emby-scroller-container .emby-scrollbuttons-button.paper-icon-button-light {
	padding-left: 14em;
	padding-bottom: 0.5em;
	font-size: 1.2em;
}
.layout-desktop #itemDetailPage .emby-scrollbuttons-button > .material-icons {
	font-size: 1.25em;
}


/* --- Mobile View --- */
.layout-mobile .itemBackdrop {
	display: block;
	-webkit-animation: backdrop-fadein .8s ease-in normal both;
	animation: backdrop-fadein .8s ease-in normal both;
	background-attachment: fixed;
	background-position: 50%;
	background-repeat: no-repeat;
	background-size: cover;
	height: 100vh !important;
	position: fixed !important;
	top: 0;
	margin-top: 0rem;
	left: 0;
	width: 100%;
	z-index: -1;
	filter: blur(0px) saturate(0%) contrast(130%) brightness(20%);
}

.backgroundContainer {
	background-color: transparent;
}

.layout-mobile h1.itemName, .layout-mobile h1.parentName {
	font-size: 1.6em;
	position: relative;
	display: flex;
	margin-left: 0.8em;
}

@media (max-width: 32em) {
  .layout-mobile .detailImageContainer .card {
	bottom: 0;
	left: 0;
	min-width: 34vw;
	max-width: 38vw;
  }
}

@media (orientation: landscape) {
	.layout-mobile .detailLogo {
		display: block;
		position: relative;
		top: 3em;
		height: 18em;
		margin-bottom: -8em;
		width: 62%;
		left: 28.5%;
	}
}

@media (orientation: portrait) {
	.layout-mobile .detailLogo {
		display: block;
		position: relative;
		top: 7em;
		height: 11em;
		margin-bottom: -7em;
		width: 49%;
		left: 44.5%;
	}
}


.layout-mobile #itemDetailPage .itemName.infoText.parentNameLast {
  display: none;
  font-family: inherit;
  font-weight: 700 !important;
  text-transform: uppercase;
  justify-content: center !important;
}

.layout-mobile .detailRibbon {
  background: transparent;
  padding-top: 14em;
}

.layout-mobile .pageWithAbsoluteTabs .pageTabContent {
  padding-bottom: 5em !important;
  padding-bottom: calc(env(safe-area-inset-bottom) + 5em) !important;
  margin-top: 2em;
}

.layout-mobile [dir="ltr"] .mainDetailButtons {
        margin-left: 0;
   	padding-left: 35%;
	z-index: 10 !important;
    	position: relative;
}

@media (min-width: 30em) and (orientation: portrait) {
	.layout-mobile [dir="ltr"] .mainDetailButtons {
		padding-left: 25%;
	}
	.layout-mobile .detailLogo {
		left: 35%;
	}
}
.layout-mobile #similarCollapsible .cardText.cardTextCentered.cardText-first {
	text-transform: uppercase;
}
/* ... */

